# GPT-cell-annotator

./: .env.template  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE-text.html  Makefile  README.md  RELEASING.md  authors.html  environment.yml  index.html  index.md  llms.txt  pkgdown.yml  pyproject.toml  requirements.txt  search.json  tox.ini
.github/workflows/: ci.yml
articles/: annotate-seurat.html  annotate-seurat.md  index.html  index.md
backend/cache/: async_cache.py
clients/r/: RELEASING.md
clients/r/gptcellannotator/: DESCRIPTION  NEWS.md  README.md
clients/r/gptcellannotator/R/: annotate.R  cli.R  config.R  http.R  seurat.R
clients/r/gptcellannotator/docs/: 404.html  LICENSE-text.html  LICENSE-text.md  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  sitemap.xml
clients/r/gptcellannotator/docs/articles/: annotate-seurat.html  annotate-seurat.md  index.html
clients/r/gptcellannotator/docs/news/: index.html  index.md
clients/r/gptcellannotator/docs/reference/: gptca_add_metadata.html  gptca_annotate.html  gptca_config.html  gptca_config.md  gptca_config_reset.html  gptcellannotator-package.html  gptcellannotator-package.md  gptcellannotator.html  index.html
clients/r/gptcellannotator/man/: gptca_annotate.Rd  gptca_config.Rd  gptcellannotator-package.Rd
clients/r/gptcellannotator/pkgdown/: _pkgdown.yml
clients/r/gptcellannotator/tests/testthat/: test-annotate.R  test-config.R
clients/r/gptcellannotator/vignettes/: annotate-seurat.Rmd
clients/r/scripts/qa/: offline_cli.R
config/: settings.py
data/: .gitignore  README.md
docs/: SYSTEM_PROPMTS.md  development.md  faq.md  getting_started.md  install.md  scanpy_integration.md  seurat_integration.md
docs/architecture/: scanpy_integration.md
docs/migration/: scanpy_vNext.md
docs/reports/releases/0.2.0/: hashes.txt  install_matrix.md  release_notes.md  smoke_tests.md
gpt_cell_annotator/: cache.py  cli.py  scanpy.py  scanpy_cli.py
gpt_cell_annotator/_assets/: __init__.py
news/: index.html  index.md
notebooks/: ScanpyBenchmark.ipynb  pbmc_workflow.ipynb  scanpy_benchmark.py
reference/: gptca_annotate.html  gptca_annotate.md  gptca_config.html  gptca_config.md  gptcellannotator-package.html  gptcellannotator-package.md  index.html  index.md
scripts/: build_marker_db.py  run_tests.sh  setup_env.sh
src/backend/data_ingest/: marker_loader.py
src/backend/llm/: annotator.py  prompts.py  retrieval.py
src/backend/util/: gene_normalization.py
src/backend/validation/: crosscheck.py  report.py
src/config/: __init__.py  gene_synonyms.json  marker_sources.yaml  settings.py
src/config/orthologs/: human_mouse.tsv
src/gpt_cell_annotator/: __init__.py  annotate.py  assets.py  cli.py  scanpy.py  scanpy_cli.py
src/gpt_cell_annotator/_assets/config/: marker_sources.yaml
src/gpt_cell_annotator/_assets/data/demo/: cellmarker_demo.csv  curated_demo.json  panglaodb_demo.csv  pbmc_markers.csv
src/gpt_cell_annotator/schemas/: __init__.py  annotation_result.schema.json
tests/: test_annotator.py  test_cache.py  test_cli.py  test_prompts.py  test_python_api.py  test_scanpy_integration.py  test_settings.py  test_single_cluster.py  test_validation.py
tests/fixtures/: scanpy.py
