[build-system]
requires = [ "poetry-core>=1.8.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gpt-cell-annotator"
version = "0.2.0"
description = "AI assistant for annotating single-cell RNA-seq clusters using curated marker knowledge and LLM reasoning."
authors = [ "GPT Cell Annotator Team <maintainers@gptca.dev>",]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jameshyojaelee/CellAnnot-GPT"
repository = "https://github.com/jameshyojaelee/CellAnnot-GPT"
keywords = [ "single-cell", "bioinformatics", "annotation", "machine-learning",]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
package-mode = true
packages = [
    { include = "gpt_cell_annotator" },
    { include = "backend" },
    { include = "config" },
    { include = "frontend" },
]
include = [
    { path = "gpt_cell_annotator/_assets/**/*", format = [ "sdist", "wheel" ] },
    { path = "schemas/**/*.json", format = [ "sdist", "wheel" ] },
]

[tool.poetry.scripts]
gca = "gpt_cell_annotator.cli:main"
gca-scanpy = "gpt_cell_annotator.scanpy:main"

[tool.black]
line-length = 100
target-version = [ "py311",]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
strict_optional = true
implicit_reexport = false
mypy_path = "$PROJECT_ROOT"
[[tool.mypy.overrides]]
module = [ "pandas", "pandas.*", "yaml", "yaml.*", "jsonschema", "jsonschema.*",]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "anndata",
    "anndata.*",
    "scanpy",
    "scanpy.*",
    "prometheus_client",
    "prometheus_client.*",
]
ignore_missing_imports = true

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.30.0"
pandas = "^2.2.2"
numpy = "^1.26.4"
anndata = "^0.10.7"
scikit-learn = "^1.5.0"
rich = "^13.7.1"
pydantic = "^2.7.1"
pydantic-settings = "^2.3.4"
httpx = "^0.27.0"
sqlalchemy = "^2.0.30"
python-dotenv = "^1.0.1"
pyarrow = "^16.1.0"
structlog = "^24.1.0"
jsonschema = "^4.25.0"
pyyaml = "^6.0.2"
fastapi = { version = "^0.116.0", optional = true }
streamlit = { version = "^1.36.0", optional = true }
redis = { version = "^5.0.4", optional = true }
altair = { version = "^5.3.0", optional = true }
fpdf2 = { version = "^2.7.0", optional = true }
scanpy = { version = "^1.10.1", optional = true }
matplotlib = { version = "^3.9.0", optional = true }
seaborn = { version = "^0.13.2", optional = true }
uvicorn = { version = "^0.30.1", extras = [ "standard" ], optional = true }
loompy = { version = "^3.0.7", optional = true }
prometheus-client = { version = "^0.20.0", optional = true }
pytest = { version = "^8.2.1", optional = true }
black = { version = "^24.4.2", optional = true }
mypy = { version = "^1.10.0", optional = true }
ruff = { version = "^0.4.4", optional = true }
poethepoet = { version = "^0.27.0", optional = true }
pytest-asyncio = { version = "^0.23.7", optional = true }
fakeredis = { version = "^2.23.2", optional = true }
pandas-stubs = { version = "^2.2.2.240807", optional = true }
types-pyyaml = { version = "^6.0.12.20240808", optional = true }
types-jsonschema = { version = "^4.23.0.20241019", optional = true }
pkginfo = { version = "^1.10.0", optional = true }
twine = { version = "^6.1.0", optional = true }
pre-commit = { version = "^3.7.1", optional = true }

[tool.poetry.extras]
api = [ "fastapi", "uvicorn", "redis", "prometheus-client" ]
ui = [ "streamlit", "altair", "fpdf2", "matplotlib", "seaborn" ]
scanpy = [ "scanpy", "loompy" ]
dev = [ "pytest", "pytest-asyncio", "black", "ruff", "mypy", "fakeredis", "pandas-stubs", "types-pyyaml", "types-jsonschema", "poethepoet", "twine", "pkginfo", "pre-commit" ]
full = [
    "fastapi",
    "uvicorn",
    "redis",
    "prometheus-client",
    "streamlit",
    "altair",
    "fpdf2",
    "matplotlib",
    "seaborn",
    "scanpy",
    "loompy",
]

[tool.ruff.lint]
select = [ "E", "F", "B", "I", "UP", "N", "RUF",]
ignore = [ "B008",]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --strict-markers -p pytest_asyncio"
testpaths = [ "tests",]
pythonpath = [ ".",]
markers = [
    "asyncio: marks tests that exercise asyncio codepaths",
]

[tool.poe.tasks]
install = "poetry install"
lock = "poetry lock"

[tool.poe.tasks.format]
cmd = "black backend frontend evaluation scripts config tests"

[tool.poe.tasks.ruff]
cmd = "ruff check backend frontend evaluation scripts config tests"

[tool.poe.tasks.ruff-fix]
cmd = "ruff check --fix backend frontend evaluation scripts config tests"

[tool.poe.tasks.typecheck]
cmd = "mypy backend"

[tool.poe.tasks.test]
cmd = "pytest"

[tool.poe.tasks.lint]
sequence = [ "ruff", "typecheck",]

[tool.poe.tasks.benchmarks]
cmd = "python scripts/run_benchmarks.py --mock"

[tool.poe.tasks.build-marker-db]
cmd = "python scripts/build_marker_db.py"

[tool.poe.tasks.api]
cmd = "uvicorn backend.api.main:app --reload"

[tool.poe.tasks.ui]
cmd = "streamlit run frontend/streamlit_app.py"
