[build-system]
requires = [ "poetry-core>=1.8.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gpt-cell-annotator"
version = "0.2.0"
description = "AI assistant for annotating single-cell RNA-seq clusters using curated marker knowledge and LLM reasoning."
authors = [ "GPT Cell Annotator Team <maintainers@gptca.dev>",]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jameshyojaelee/CellAnnot-GPT"
repository = "https://github.com/jameshyojaelee/CellAnnot-GPT"
keywords = [ "single-cell", "bioinformatics", "annotation", "machine-learning",]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
package-mode = true
packages = [
    { include = "gpt_cell_annotator", from = "src" },
    { include = "backend", from = "src" },
    { include = "config", from = "src" },
]
include = [
    { path = "src/gpt_cell_annotator/_assets/**/*", format = [ "sdist", "wheel" ] },
    { path = "src/gpt_cell_annotator/schemas/**/*.json", format = [ "sdist", "wheel" ] },
    { path = "src/config/**/*.json", format = [ "sdist", "wheel" ] },
    { path = "src/config/**/*.yaml", format = [ "sdist", "wheel" ] },
    { path = "src/config/orthologs/**/*.tsv", format = [ "sdist", "wheel" ] },
]

[tool.poetry.scripts]
gca = "gpt_cell_annotator.cli:main"

[tool.black]
line-length = 100
target-version = [ "py311",]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
strict_optional = true
implicit_reexport = false
mypy_path = "$PROJECT_ROOT/src"
[[tool.mypy.overrides]]
module = [ "pandas", "pandas.*", "jsonschema", "jsonschema.*",]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "structlog",
    "structlog.*",
]
ignore_missing_imports = true

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
openai = "^1.30.0"
pandas = "^2.2.2"
rich = "^13.7.1"
pydantic = "^2.7.1"
pydantic-settings = "^2.3.4"
pyarrow = "^16.1.0"
jsonschema = "^4.25.0"
pytest = { version = "^8.2.1", optional = true }
black = { version = "^24.4.2", optional = true }
mypy = { version = "^1.10.0", optional = true }
ruff = { version = "^0.4.4", optional = true }
poethepoet = { version = "^0.27.0", optional = true }
pytest-asyncio = { version = "^0.23.7", optional = true }
pandas-stubs = { version = "^2.2.2.240807", optional = true }
types-jsonschema = { version = "^4.23.0.20241019", optional = true }
pkginfo = { version = "^1.10.0", optional = true }
twine = { version = "^6.1.0", optional = true }
pre-commit = { version = "^3.7.1", optional = true }

[tool.poetry.extras]
dev = [ "pytest", "pytest-asyncio", "black", "ruff", "mypy", "pandas-stubs", "types-jsonschema", "poethepoet", "twine", "pkginfo", "pre-commit" ]

[tool.ruff.lint]
select = [ "E", "F", "B", "I", "UP", "N", "RUF",]
ignore = [ "B008",]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --strict-markers -p pytest_asyncio"
testpaths = [ "tests",]
pythonpath = [ "src",]
markers = [
    "asyncio: marks tests that exercise asyncio codepaths",
]

[tool.poe.tasks]
install = "poetry install"
lock = "poetry lock"

[tool.poe.tasks.format]
cmd = "black src scripts tests"

[tool.poe.tasks.ruff]
cmd = "ruff check src scripts tests"

[tool.poe.tasks.ruff-fix]
cmd = "ruff check --fix src scripts tests"

[tool.poe.tasks.typecheck]
cmd = "mypy src/backend src/gpt_cell_annotator src/config"

[tool.poe.tasks.test]
cmd = "pytest"

[tool.poe.tasks.lint]
sequence = [ "ruff", "typecheck",]
